[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/game/terrain.gd" type="Script" id=1]
[ext_resource path="res://scenes/game/canvas_layer.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/prefabs/camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/prefabs/lander.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/prefabs/arrival_point.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/game/game.gd" type="Script" id=6]

[node name="level_1" type="Node2D"]
script = ExtResource( 6 )

[node name="canvas_layer" parent="." instance=ExtResource( 2 )]

[node name="camera" parent="." instance=ExtResource( 3 )]
position = Vector2( -2389, -882 )
rotation = -1.5708

[node name="top_left" parent="camera/limits" index="0"]
position = Vector2( -2504, -1618 )

[node name="bottom_right" parent="camera/limits" index="1"]
position = Vector2( 1364.37, 373.163 )

[node name="lander" parent="." instance=ExtResource( 4 )]
position = Vector2( -2389, -882 )
rotation = -1.5708
linear_velocity = Vector2( 450, 0 )

[node name="rem_transf" type="RemoteTransform2D" parent="lander"]
position = Vector2( 0, 0.00012207 )
remote_path = NodePath("../../camera")

[node name="terrain" type="StaticBody2D" parent="."]
script = ExtResource( 1 )

[node name="collision" type="CollisionPolygon2D" parent="terrain"]
polygon = PoolVector2Array( 0, -4, 3, 3, -3, 3 )

[node name="poly" type="Polygon2D" parent="terrain"]
color = Color( 0.431373, 0.431373, 0.431373, 1 )
polygon = PoolVector2Array( -402.028, 88.4189, -170.636, 219.287, 60.4408, 219.246, 300, 137, 417, -64, 576, -93, 782, -7, 1038.49, -67.134, 1145.28, -387.496, 1273.43, -398.174, 1369.53, -531.658, 1369.53, 509.517, -2615.37, 510.184, -2609.54, -481.343, -2538.27, -695.158, -2402.85, -809.193, -2274.56, -802.066, -2196.16, -759.303, -2117.76, -723.667, -2048.73, -620.574, -1947.13, -550.729, -1762.99, -620.574, -1547.11, -582.477, -1439.16, -499.932, -1268.11, -462.247, -1077.24, -493.582, -923.887, -403.92, -766.105, -258.647, -721.658, -131.655, -617, -31 )

[node name="arrival_point" parent="." instance=ExtResource( 5 )]
position = Vector2( -49.5772, 218.285 )
[connection signal="exit" from="canvas_layer" to="." method="_on_canvas_layer_exit"]
[connection signal="moving" from="lander" to="." method="_on_lander_moving"]
[connection signal="stopped" from="lander" to="." method="_on_lander_stopped"]
[connection signal="body_entered" from="arrival_point" to="." method="_on_arrival_point_body_entered"]
[connection signal="body_exited" from="arrival_point" to="." method="_on_arrival_point_body_exited"]
[connection signal="screen_entered" from="arrival_point" to="lander" method="_on_arrival_point_screen_entered"]
[connection signal="screen_exited" from="arrival_point" to="lander" method="_on_arrival_point_screen_exited"]

[editable path="camera"]
